@@ -2206,6 +2206,9 @@ languages/m4/t/builtins/011_eval.t                [m4]
 languages/m4/t/builtins/012_undefine.t            [m4]
 languages/m4/t/builtins/013_ifdef.t               [m4]
 languages/m4/t/builtins/014_ifelse.t              [m4]
+languages/m4/t/builtins/015___file__.t            [m4]
+languages/m4/t/builtins/016___line__.t            [m4]
+languages/m4/t/builtins/017_printerr.t            [m4]
 languages/m4/t/freezing/001_freeze.t              [m4]
 languages/m4/t/freezing/002_many_files.t          [m4]
 languages/m4/t/harness                            [m4]
